Fix dark mode for drolesdezebres

--- a/src/css/dark_theme/game.less
+++ b/src/css/dark_theme/game.less
@@ -807,9 +807,6 @@ div[id*="popin"][id$="underlay"] {
   left: 0px;
   width: 100%;
   height: 100%;
-}
-
-.bgaext_overlay {
   filter: invert(1) hue-rotate(180deg);
 }
 
